<resources>
    <string name="app_name">Dados</string>
    <string name="autor">Gustavo de Paula 1110482313003</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="d100">D100</string>
    <string name="btnSortear">Sortear</string>


</resources>